--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@ GEMINI_API_KEY=your_gemini_api_key
 OPENAI_API_KEY=your_openai_api_key
 STREAM_API_KEY=your_stream_api_key
 STREAM_API_SECRET=your_stream_api_secret
+VEO_API_KEY=your_veo_api_key
 HOST=0.0.0.0
 PORT=8000
 DEBUG=false
